# FigureFollowerEnv

./: Example.py  README.md  pyproject.toml
FigFollowerEnv/: __init__.py  get_assets_path.py
FigFollowerEnv/assets/circle/: circle.mtl  circle.urdf  circle.urdf.xacro
FigFollowerEnv/assets/omni_robot/: omni_robot.urdf  omni_robot.urdf.xacro  wheel.urdf.xacro
FigFollowerEnv/assets/pentagon/: pentagon.mtl  pentagon.urdf  pentagon.urdf.xacro
FigFollowerEnv/assets/square/: square.mtl  square.urdf  square.urdf.xacro
FigFollowerEnv/assets/triangle/: triangle.mtl  triangle.urdf  triangle.urdf.xacro
FigFollowerEnv/env/: FigFollowerV0.py  FigFollowerV1.py  MapGenerator.py  Simulation.py
